--- a/package.json
+++ b/package.json
@@ -6,13 +6,15 @@
   "dependencies": {
     "body-parser": "^1.13.3",
     "bower": "^1.6.5",
+    "compression": "^1.6.0",
     "express": "~4.13.3",
     "express-handlebars": "~2.0.1",
     "express-myconnection": "^1.0.4",
     "express-session": "^1.11.3",
+    "geolib": "~2.0.18",
     "mocha": "^2.3.3",
-    "nodemon": "~1.4.0",
-    "geolib": "~2.0.18"
+    "mysql": "^2.9.0",
+    "nodemon": "~1.4.0"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
